# yolov5_seg_opencv

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  class.names  cmake_install.cmake  get_video.py  main.cpp  main_my.py  main_o.cpp  my_yolo
AM/: AM.cpp  am.h
dataloder/: dataloder.cpp  dataloder.h
model/: resnet.cpp  resnet.h  yolo.cpp  yolo.h
opencv/lib/: libopencv_aruco.so.4.5.0  libopencv_bgsegm.so.4.5.0  libopencv_bioinspired.so.4.5.0  libopencv_calib3d.so.4.5.0  libopencv_ccalib.so.4.5.0  libopencv_cudaarithm.so.4.5  libopencv_cudabgsegm.so.4.5.0  libopencv_cudacodec.so.4.5  libopencv_cudacodec.so.4.5.0  libopencv_cudalegacy.so.4.5.0  libopencv_cudaobjdetect.so.4.5  libopencv_cudaobjdetect.so.4.5.0  libopencv_cudaoptflow.so.4.5.0  libopencv_cudastereo.so.4.5.0  libopencv_cudawarping.so.4.5  libopencv_cudev.so.4.5.0  libopencv_datasets.so.4.5.0  libopencv_dnn_objdetect.so.4.5.0  libopencv_dnn_superres.so.4.5.0  libopencv_dpm.so.4.5.0  libopencv_face.so.4.5.0  libopencv_features2d.so.4.5.0  libopencv_flann.so.4.5.0  libopencv_freetype.so.4.5.0  libopencv_fuzzy.so.4.5.0  libopencv_hfs.so.4.5.0  libopencv_highgui.so.4.5.0  libopencv_img_hash.so.4.5.0  libopencv_imgcodecs.so.4.5.0  libopencv_intensity_transform.so.4.5.0  libopencv_line_descriptor.so.4.5.0  libopencv_mcc.so.4.5.0  libopencv_ml.so.4.5.0  libopencv_objdetect.so.4.5.0  libopencv_optflow.so.4.5.0  libopencv_phase_unwrapping.so.4.5.0  libopencv_photo.so.4.5.0  libopencv_plot.so.4.5.0  libopencv_quality.so.4.5.0  libopencv_rapid.so.4.5.0  (+18 more)
opencv/lib/cmake/opencv4/: OpenCVConfig.cmake  (+1 more)
